# imdb-watchlist-roulette

./: .gitignore  LICENSE  README.md  imdb-watchlist-roulette.cabal
src/: Main.hs
