name:                imdb-watchlist-roulette
version:             0.1.0.0
-- synopsis:
description:         Select a random movie from your IMDB watchlist
homepage:            https://github.com/hendriklammers/imdb-watchlist-roulette#readme
license:             MIT
license-file:        LICENSE
author:              Hendrik Lammers
maintainer:          lammers@gmail.com
copyright:           2019 Hendrik Lammers
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable imdb-watchlist-roulette
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       cassava,
                       vector,
                       bytestring,
                       random
